--- a/frontend/pages/skills.module.css
+++ b/frontend/pages/skills.module.css
@@ -150,4 +150,12 @@
     padding-left: 20px;
     gap: 24px;
   }
+
+  .title {
+    font-family: Geist;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 26px;
+    letter-spacing: 0%;
+  }
 }
