--- a/frontend/pages/skills.module.css
+++ b/frontend/pages/skills.module.css
@@ -139,15 +139,15 @@
   }
 
   .controlcontainer {
-    width: 700px;
+    width: 600px;
     height: 200px;
-    top: 527px;
     left: 370px;
     border-radius: 24px;
-    padding-top: 26px;
-    padding-right: 20px;
+    margin-bottom: 15px;
+    padding-top: 16px;
+    padding-right: 5px;
     padding-bottom: 26px;
-    padding-left: 20px;
+    padding-left: 5px;
     gap: 24px;
   }
 
